2007-02-04 Braden McDaniel  <braden@endoframe.com>

	Allow the GtkVrmlBrowser widget to take focus.

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp
	(gtk_vrml_browser_init(GtkVrmlBrowser *)): Added
	GDK_FOCUS_CHANGE_MASK to the event mask; set the widget's
	can-focus property to "true".
	(gtk_vrml_browser_button_press_event(GtkWidget *, GdkEventButton*,
	gpointer)): Grab the focus.

2007-02-04 Braden McDaniel  <braden@endoframe.com>

	Factored GladeXML creation out of main.

	* src/openvrml-player/player.cpp
	(main(int, char *[])): Factored GladeXML creation out of main.
	(xml_new(GnomeProgram &)): Moved GladeXML creation to here.

2007-02-04 Braden McDaniel  <braden@endoframe.com>

	Use pkg-config to check for FreeType.

	* configure.ac: Use pkg-config to check for FreeType; add
	freetype2 to OPENVRML_PKG_REQUIRES if Text node rendering is
	enabled.
	* openvrml.pc.in: Removed FREETYPE_LIBS from Libs; this is now
	covered by Requires.

2007-02-03 Braden McDaniel  <braden@endoframe.com>

	Fixed PROTO eventIn and eventOut lookup functions to try the
	"set_" prefix and "_changed" suffix (respectively) when looking up
	event_listener and event_emitter objects.

	* src/libopenvrml/openvrml/browser.cpp
	(proto_node::do_event_listener(const std::string &)): Prepend
	"set_" to the eventIn name if the passed value is not found in the
	eventIn map.
	(proto_node::do_event_emitter(const std::string &)): Append
	"_changed" to the eventOut name if the passed value is not found
	in the eventOut map.

2007-02-03 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Require GLib >= 2.6 since openvrml-gtkplug and
	openvrml-player use GOption.

2007-01-23 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fail if pkg-config doesn't find libglade-2.0,
	libgnomeui-2.0, or libcurl when openvrml-player is configured to
	be built.

2007-01-23 Braden McDaniel  <braden@endoframe.com>

	openvrml-player needs libgnomeui; not just libgnome.
